# multi-agent-research

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docs/: sample-report.md
src/research_agent/: __init__.py  __main__.py  api.py  cli.py  config.py  cost.py  graph.py  job_store.py  schemas.py  service.py  state.py  supervisor.py  utils.py
src/research_agent/agents/: __init__.py  analysis.py  search.py  writer.py
src/research_agent/templates/: report.md.j2
src/research_agent/tools/: __init__.py  tavily_search.py  web_fetch.py  web_search.py
tests/: test_api.py  test_graph.py  test_job_store.py  test_service.py  test_supervisor.py  test_tools.py  test_utils.py
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
web/components/brand/: brand-mark.tsx
web/components/layout/: header.tsx  mobile-nav.tsx  site-footer.tsx  theme-toggle.tsx
web/components/research/: activity-panel.tsx  agent-pipeline.tsx  budget-footer.tsx  report-history.tsx  report-markdown.tsx  report-viewer-skeleton.tsx  topic-form.tsx  (+3 more)
web/e2e/: research-flow.spec.ts
web/lib/: activity-log.test.ts  activity-log.ts  agent-activity.ts  api.test.ts  api.ts  brand-icon.ts  build-print-document.test.ts  build-print-document.ts  export-pdf.ts  format-currency.test.ts  format-currency.ts  mock-data.ts  nav-links.ts  types.ts
web/test-results/: .last-run.json
(+2 files in other folders)
