[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Multi-Agent Research & Report Generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
test = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.26.0,<1",
    "pytest-cov>=6.0.0,<7",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
research = "research_agent.cli:main"
research-api = "research_agent.api:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["research_agent*"]

[tool.setuptools.package-data]
research_agent = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
